--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
         <title>Kitty Cam</title>
     </head>
 </html>
-<body>
+<body style="background-color: #ffe6e6">
     <div id="root"></div>
     <script type="module" src="index.jsx"></script>
 </body>
